--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -266,10 +266,10 @@
           href: ../common/storage-explorer-troubleshooting.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: 存储资源管理器可访问性
           href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-    - name: Microsoft Q&A 上的 Azure 存储
+    - name: Microsoft Q&A 上的队列存储
       href: 'https://docs.microsoft.com/answers/topics/azure-queue-storage.html'
-    - name: Stack Overflow 上的 Azure 存储
-      href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
+    - name: Stack Overflow 上的队列存储
+      href: 'https://stackoverflow.com/questions/tagged/azure-queues'
     - name: 队列存储的定价
       href: 'https://azure.microsoft.com/pricing/details/storage/queues/'
     - name: Azure 定价计算器
