--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -582,10 +582,10 @@
               href: ../common/storage-explorer-support-policy-lifecycle.md
             - name: 存储资源管理器可访问性
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Microsoft Q&A 上的 Azure 存储
+        - name: Microsoft Q&A 上的 Blob 存储
           href: 'https://docs.microsoft.com/answers/topics/azure-blob-storage.html'
-        - name: Stack Overflow 上的 Azure 存储
-          href: 'https://stackoverflow.com/questions/tagged/windows-azure-storage'
+        - name: Stack Overflow 上的 Blob 存储
+          href: 'https://stackoverflow.com/questions/tagged/azure-blob-storage'
         - name: 块 blob 的定价
           href: 'https://azure.microsoft.com/pricing/details/storage/blobs/'
         - name: 页 blob 的定价
