commit translated contents

--- a/articles/azure-app-configuration/index.yml
+++ b/articles/azure-app-configuration/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: azure-app-configuration
   ms.topic: landing-page
   ms.date: 02/03/2020
-  ms.openlocfilehash: cbe60347ec05f7df5961f0efc2ed7476cd4e2dde
-  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
+  ms.openlocfilehash: d9f08f99b6b8d945243b78cc208a3432e43108b7
+  ms.sourcegitcommit: a92fbc09b859941ed64128db6ff72b7a7bcec6ab
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/13/2020
-  ms.locfileid: "91969511"
+  ms.lasthandoff: 10/15/2020
+  ms.locfileid: "92074747"
 landingContent:
 - title: 关于 Azure 应用配置
   linkLists:
@@ -115,9 +115,9 @@ landingContent:
   - linkListType: reference
     links:
     - text: .NET Core 库
-      url: https://go.microsoft.com/fwlink/?linkid=2091700
+      url: /dotnet/api/microsoft.featuremanagement
     - text: .NET Core 筛选器库
-      url: https://go.microsoft.com/fwlink/?linkid=2091601
+      url: /dotnet/api/microsoft.featuremanagement.featurefilters
 - title: 配置 SDK 和示例
   linkLists:
   - linkListType: sample
@@ -127,13 +127,13 @@ landingContent:
   - linkListType: reference
     links:
     - text: Azure CLI
-      url: https://docs.microsoft.com/cli/azure/appconfig?view=azure-cli-latest
+      url: /cli/azure/appconfig?view=azure-cli-latest
     - text: PowerShell
-      url: https://docs.microsoft.com/powershell/module/az.appconfiguration/
+      url: /powershell/module/az.appconfiguration/
     - text: Terraform
       url: https://www.terraform.io/docs/providers/azurerm/r/app_configuration.html
     - text: .NET Core 提供程序
-      url: https://go.microsoft.com/fwlink/?linkid=2074664
+      url: /dotnet/api/Microsoft.Extensions.Configuration.AzureAppConfiguration
     - text: Spring Boot 提供程序
       url: https://github.com/microsoft/spring-cloud-azure/tree/master/
     - text: 用于 Java 的 Azure SDK
