--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -54,6 +54,22 @@
               href: class-type-matlab.md
             - name: SolidWorks 计算机辅助设计 (CAD)
               href: class-type-solidworks.md
+        - name: 使用 Teams 中的 Azure 实验室服务
+          items:
+            - name: 概述
+              href: lab-services-within-teams-overview.md
+            - name: 从 Teams 创建实验室
+              href: how-to-get-started-create-lab-within-teams.md
+            - name: 管理用户列表
+              href: how-to-manage-user-lists-within-teams.md
+            - name: 管理 VM 池
+              href: how-to-manage-vm-pool-within-teams.md
+            - name: 删除实验室
+              href: how-to-get-started-create-lab-within-teams.md#deleting-classroom-labs
+            - name: 日程安排和设置
+              href: how-to-create-schedules-within-teams.md
+            - name: 访问 VM（学生视图）
+              href: how-to-access-vm-for-students-within-teams.md
 - name: 操作指南
   items:
     - name: 管理员指南
