--- a/articles/active-directory/app-provisioning/toc.yml
+++ b/articles/active-directory/app-provisioning/toc.yml
@@ -6,18 +6,11 @@
     - name: 什么是应用程序预配？
       href: user-provisioning.md
 - name: 教程
+  expanded: true
   items:
-    - name: G Suite
-      href: ../saas-apps/google-apps-provisioning-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
-    - name: ServiceNow
-      href: ../saas-apps/servicenow-provisioning-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
-    - name: Amazon Web Services (AWS) - 角色预配
-      href: ../saas-apps/amazon-web-service-tutorial.md?context=azure/active-directory/app-provisioning/context/app-provisioning-context#configure-azure-ad-sso
-    - name: Workday
-      href: ../saas-apps/workday-inbound-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
-    - name: SAP SuccessFactors
-      href: ../saas-apps/sap-successfactors-inbound-provisioning-cloud-only-tutorial.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
-    - name: 所有集成库应用
+    - name: 生成 SCIM 终结点并配置预配
+      href: use-scim-to-provision-users-and-groups.md
+    - name: 有关应用特定的预配的教程
       href: /azure/active-directory/saas-apps
 - name: 概念
   expanded: true
@@ -28,17 +21,15 @@
       href: plan-auto-user-provisioning.md
     - name: 规划云 HR 预配部署
       href: plan-cloud-hr-provision.md
+    - name: 了解使用 Azure Monitor 进行日志记录的情况
+      href: application-provisioning-log-analytics.md
 - name: 操作指南
   expanded: true
   items:
     - name: 为库应用配置预配
       href: configure-automatic-user-provisioning-portal.md
-    - name: 编辑属性映射
-      items:
-        - name: 自定义属性映射
-          href: customize-application-attributes.md
-        - name: 为属性映射编写表达式
-          href: functions-for-customizing-application-data.md
+    - name: 自定义属性映射
+      href: customize-application-attributes.md
     - name: 在范围中包括或排除用户和组
       items:
         - name: 设置要预配的用户或组的范围
@@ -57,6 +48,8 @@
           href: export-import-provisioning-configuration.md
         - name: 预配报表
           href: ../reports-monitoring/concept-provisioning-logs.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
+    - name: 使用 MS Graph 自动执行配置
+      href: 'https://docs.microsoft.com/graph/application-provisioning-configure-api'
     - name: 排查应用程序预配问题
       items:
         - name: 已知问题
@@ -65,26 +58,20 @@
           href: application-provisioning-config-problem.md
         - name: 隔离状态
           href: application-provisioning-quarantine-status.md
-        - name: 授权问题（无法保存管理员凭据）
-          href: application-provisioning-config-problem-storage-limit.md
         - name: 未预配用户
           href: application-provisioning-config-problem-no-users-provisioned.md
-        - name: 预配了错误的用户
-          href: application-provisioning-config-problem-wrong-users-provisioned.md
         - name: 缺少源属性
           href: user-provisioning-sync-attributes-for-mapping.md
         - name: “预配”日志
           href: ../reports-monitoring/concept-provisioning-logs.md?context=azure%2factive-directory%2fapp-provisioning%2fcontext%2fapp-provisioning-context
-    - name: 生成 SCIM 终结点并配置预配
-      href: use-scim-to-provision-users-and-groups.md
-    - name: 使用 MS Graph 自动执行配置
-      href: 'https://docs.microsoft.com/graph/application-provisioning-configure-api'
 - name: 参考
   items:
     - name: SCIM 2.0 协议符合性
       href: application-provisioning-config-problem-scim-compatibility.md
     - name: SCIM 和 Graph 方案
       href: scim-graph-scenarios.md
+    - name: 有关为属性映射编写表达式的函数参考
+      href: functions-for-customizing-application-data.md
     - name: 云 HR 预配
       items:
         - name: SuccessFactors 集成
@@ -93,8 +80,6 @@
           href: sap-successfactors-attribute-reference.md
         - name: Workday 属性参考
           href: workday-attribute-reference.md
-    - name: Azure AD Connect 预配代理
-      items:
         - name: 预配代理版本历史记录
           href: provisioning-agent-release-version-history.md
 - name: 资源
