--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -23,6 +23,8 @@
   items:
     - name: 自定义模式
       href: concepts-models.md
+    - name: 转换行业标准模型
+      href: concepts-convert-models.md
     - name: 数字孪生和孪生图
       href: concepts-twins-graph.md
     - name: 查询语言
@@ -122,7 +124,7 @@
     - name: API 和 SDK
       items:
         - name: REST API 参考
-          href: 'https://docs.microsoft.com/rest/api/azure-digitaltwins/'
+          href: /rest/api/azure-digitaltwins/
         - name: 控制面板
           items:
             - name: Swagger
@@ -130,13 +132,13 @@
             - name: .NET (C#) SDK - NuGet
               href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.DigitalTwins/1.0.0-preview.1'
             - name: .NET (C#) SDK - 参考
-              href: 'https://docs.microsoft.com/dotnet/api/overview/azure/digitaltwins/management?view=azure-dotnet-preview'
+              href: /dotnet/api/overview/azure/digitaltwins/management?view=azure-dotnet-preview
             - name: .NET (C#) SDK - 源
               href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Microsoft.Azure.Management.DigitalTwins'
             - name: Java SDK
               href: 'https://search.maven.org/artifact/com.microsoft.azure.digitaltwins.v2020_03_01_preview/azure-mgmt-digitaltwins'
             - name: Java SDK - 参考
-              href: 'https://docs.microsoft.com/java/api/overview/azure/digitaltwins/management?view=azure-java-preview'
+              href: /java/api/overview/azure/digitaltwins/management?view=azure-java-preview
             - name: Java SDK - 源
               href: 'https://github.com/Azure/azure-sdk-for-java/tree/master/sdk/digitaltwins'
             - name: JavaScript SDK
@@ -156,17 +158,17 @@
             - name: .NET (C#) SDK - NuGet
               href: 'https://www.nuget.org/packages/Azure.DigitalTwins.Core'
             - name: .NET (C#) SDK - 参考
-              href: 'https://docs.microsoft.com/dotnet/api/overview/azure/digitaltwins?view=azure-dotnet-preview'
+              href: /dotnet/api/overview/azure/digitaltwins?view=azure-dotnet-preview
             - name: .NET (C#) SDK - 源
               href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/sdk/digitaltwins/Azure.DigitalTwins.Core'
             - name: JavaScript SDK - npm
               href: 'https://www.npmjs.com/package/@azure/digital-twins/v/1.0.0-preview.1'
             - name: JavaScript SDK - 参考
-              href: 'https://docs.microsoft.com/javascript/api/@azure/digital-twins/?view=azure-node-latest&preserve-view=true'
+              href: /javascript/api/@azure/digital-twins/?preserve-view=true&view=azure-node-latest
             - name: Java SDK - Maven
               href: 'https://search.maven.org/artifact/com.azure/azure-digitaltwins-core/1.0.0-beta.1/jar'
             - name: Java SDK - 参考
-              href: 'https://docs.microsoft.com/java/api/overview/azure/digitaltwins/client?view=azure-java-preview&preserve-view=true'
+              href: /java/api/overview/azure/digitaltwins/client?preserve-view=true&view=azure-java-preview
     - name: 数字孪生 CLI
       items:
         - name: 数字孪生 CLI 参考
@@ -182,7 +184,7 @@
         - name: DTDL 分析器库 - NuGet
           href: 'https://www.nuget.org/packages/Microsoft.Azure.DigitalTwins.Parser/'
         - name: DTDL 验证器（示例）
-          href: 'https://docs.microsoft.com/samples/azure-samples/dtdl-validator/dtdl-validator/'
+          href: /samples/azure-samples/dtdl-validator/dtdl-validator/
         - name: DTMI 规范
           href: 'https://github.com/Azure/digital-twin-model-identifier'
     - name: 工具和示例项目
@@ -190,17 +192,17 @@
         - name: 设备模拟器服务
           href: 'https://github.com/Azure/device-simulation-dotnet/tree/master'
         - name: Azure 数字孪生示例
-          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-samples/digital-twins-samples/'
+          href: /samples/azure-samples/digital-twins-samples/digital-twins-samples/
         - name: Azure 数字孪生资源管理器（示例）
-          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-explorer/digital-twins-explorer/'
+          href: /samples/azure-samples/digital-twins-explorer/digital-twins-explorer/
         - name: DTDL 验证器（示例）
-          href: 'https://docs.microsoft.com/samples/azure-samples/dtdl-validator/dtdl-validator/'
+          href: /samples/azure-samples/dtdl-validator/dtdl-validator/
         - name: DPS 和 IoT 中心集成示例
-          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/'
+          href: /samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/
         - name: Azure 数字孪生自定义 Swagger
-          href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/'
+          href: /samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/
         - name: SignalR 集成示例
-          href: 'https://docs.microsoft.com/samples/azure-samples/digitaltwins-signalr-webapp-sample/digital-twins-samples/'
+          href: /samples/azure-samples/digitaltwins-signalr-webapp-sample/digital-twins-samples/
     - name: Azure 工具
       items:
         - name: Azure Cloud Shell
@@ -210,11 +212,11 @@
         - name: Azure 门户
           href: 'https://portal.azure.com'
     - name: Azure RBAC 文档
-      href: /azure/role-based-access-control/overview
+      href: ../role-based-access-control/overview.md
 - name: 资源
   items:
     - name: 支持和帮助选项
-      href: /azure/iot-fundamentals/iot-support-help
+      href: ../iot-fundamentals/iot-support-help.md
     - name: 客户案例
       href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
     - name: Channel 9 视频
