--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -121,6 +121,8 @@
       href: ../../storage/common/security-baseline.md
     - name: Azure 流量管理器安全基线
       href: ../../traffic-manager/security-baseline.md
+    - name: Azure Web 应用程序防火墙安全基线
+      href: ../../web-application-firewall/security-baseline.md
     - name: Batch 安全基线
       href: ../../batch/security-baseline.md
     - name: 认知服务的安全基线
