commit translated contents

--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: MGoedtel
   ms.author: magoedte
   ms.date: 09/23/2020
-  ms.openlocfilehash: 2ebc8329466df4fba7963a2838c19e2b7a1c539f
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: fc48de7ec0be6ce451caff91533dc24606a1e66c
+  ms.sourcegitcommit: ae6e7057a00d95ed7b828fc8846e3a6281859d40
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91357822"
+  ms.lasthandoff: 10/16/2020
+  ms.locfileid: "92103061"
 highlightedContent:
   items:
   - title: 关于 Azure Arc
@@ -86,7 +86,7 @@ conceptualContent:
     - url: ./servers/learn/tutorial-enable-vm-insights.md
       itemType: tutorial
       text: 通过用于 VM 的 Azure Monitor 的监视混合计算机
-    - url: ./servers/policy-samples.md
+    - url: ./servers/policy-reference.md
       itemType: learn
       text: 使用 Azure Policy 的许可控制策略
     - url: ./servers/manage-vm-extensions.md
