--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -65,7 +65,7 @@
             - name: 管理 VM 池
               href: how-to-manage-vm-pool-within-teams.md
             - name: 删除实验室
-              href: how-to-get-started-create-lab-within-teams.md#deleting-classroom-labs
+              href: how-to-delete-lab-within-teams.md
             - name: 日程安排和设置
               href: how-to-create-schedules-within-teams.md
             - name: 访问 VM（学生视图）
