--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: jmartens
   ms.date: 09/21/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: 444929b8fe7be180f3dcd1988cd12beea3fcf54b
-  ms.sourcegitcommit: a92fbc09b859941ed64128db6ff72b7a7bcec6ab
+  ms.openlocfilehash: 0695af04856b5e67c6e3de86c6c3cd32007aee02
+  ms.sourcegitcommit: 30505c01d43ef71dac08138a960903c2b53f2499
   ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 10/15/2020
-  ms.locfileid: "92070310"
+  ms.locfileid: "92090312"
 landingContent:
 - title: 入门：代码优先
   linkLists:
@@ -81,6 +81,6 @@ landingContent:
   - linkListType: overview
     links:
     - text: 工作室（经典版）登陆
-      url: /classic/
+      url: classic/index.yml
     - text: 工作室（经典版）与工作室
       url: overview-what-is-machine-learning-studio.md
