--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -1,7 +1,7 @@
 - name: Data Lake Storage Gen1 文档
   href: index.yml
 - name: 切换到 Data Lake Storage Gen2 文档
-  href: 'https://docs.microsoft.com/azure/storage/data-lake-storage/introduction'
+  href: ../storage/blobs/data-lake-storage-introduction.md
 - name: 概述
   items:
     - name: Data Lake Storage Gen1 是什么？
@@ -139,9 +139,9 @@
         - name: 与数据目录配合使用
           href: data-lake-store-with-data-catalog.md
         - name: 在 Azure Synapse Analytics 中与 PolyBase 配合使用
-          href: ../sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
+          href: ../synapse-analytics/sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
         - name: 与 SQL Server Integration Services 配合使用
-          href: 'https://docs.microsoft.com/sql/integration-services/connection-manager/azure-data-lake-store-connection-manager'
+          href: /sql/integration-services/connection-manager/azure-data-lake-store-connection-manager
         - name: 更多 Azure 集成选项
           href: data-lake-store-integrate-with-other-services.md
     - name: 管理
@@ -157,13 +157,13 @@
     - name: Azure PowerShell
       href: /powershell/module/az.datalakestore
     - name: .NET
-      href: 'https://docs.microsoft.com/dotnet/api/overview/azure/data-lake-store?view=azure-dotnet'
+      href: /dotnet/api/overview/azure/data-lake-store?view=azure-dotnet
     - name: Java
-      href: 'https://docs.microsoft.com/java/api/overview/azure/datalake?view=azure-java-stable'
+      href: /java/api/overview/azure/datalake?view=azure-java-stable
     - name: Node.js
       href: 'https://www.npmjs.com/package/azure-arm-datalake-store'
     - name: Python（帐户管理）
-      href: 'https://docs.microsoft.com/python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store?view=azure-python'
+      href: /python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store?view=azure-python
     - name: Python（文件系统管理）
       href: /python/api/azure-mgmt-datalake-store/azure.mgmt.datalake.store
     - name: REST
@@ -171,7 +171,7 @@
     - name: 资源管理器模板
       href: /azure/templates/microsoft.datalakestore/allversions
     - name: Azure CLI
-      href: 'https://docs.microsoft.com/cli/azure/dls'
+      href: /cli/azure/dls
     - name: Azure Policy 内置策略定义
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
@@ -180,11 +180,11 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/updates/?product=data-lake-store'
     - name: Data Lake Store 博客
-      href: 'https://blogs.msdn.microsoft.com/azuredatalake/'
+      href: /archive/blogs/azuredatalake/
     - name: 在 UserVoice 上提供反馈
       href: 'https://feedback.azure.com/forums/327234-data-lake'
     - name: Microsoft Q&A 问题页面
-      href: 'https://docs.microsoft.com/answers/topics/azure-data-lake-storage.html'
+      href: /answers/topics/azure-data-lake-storage.html
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/data-lake-store/'
     - name: 定价计算器
